// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag checkable demo works fine 1`] = `
<div
  class="tdesign-tag-checkable"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--check t-tag--default"
    >
      
      标签一
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default t-tag--disabled"
    >
      
      标签二
    
    </span>
    <span
      class="t-tag t-tag--check t-tag--default t-tag--checked"
    >
      
      标签三
    
    </span>
  </div>
</div>
`;

exports[`Tag closable demo works fine 1`] = `
<div
  class="tdesign-tag-closable"
>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--close"
  >
    
    标签一
  
    <i
      class="t-icon t-icon-close"
    />
  </span>
  <span
    class="t-tag t-tag--primary t-tag--plain t-tag--close"
  >
    
    标签二
  
    <i
      class="t-icon t-icon-close"
    />
  </span>
  <span
    class="t-tag t-tag--info t-tag--plain t-tag--close"
  >
    
    标签三
  
    <i
      class="t-icon t-icon-close"
    />
  </span>
  <span
    class="t-tag t-tag--warning t-tag--plain t-tag--close"
  >
    
    标签四
  
    <i
      class="t-icon t-icon-close"
    />
  </span>
  <span
    class="t-tag t-tag--danger t-tag--plain t-tag--close"
  >
    
    标签五
  
    <i
      class="t-icon t-icon-close"
    />
  </span>
  <span
    class="t-tag t-tag--success t-tag--plain t-tag--close"
  >
    
    标签六
  
    <i
      class="t-icon t-icon-close"
    />
  </span>
</div>
`;

exports[`Tag default demo works fine 1`] = `
<div
  class="tdesign-tag-default"
>
  <span
    class="t-tag t-tag--default t-tag--dark"
  >
    默认
  </span>
   
  <a
    class="demo-link"
  >
    <span
      class="t-tag t-tag--default t-tag--dark"
    >
      超链接
    </span>
  </a>
</div>
`;

exports[`Tag disabled demo works fine 1`] = `
<div
  class="tdesign-tag-disabled"
>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--disabled"
  >
    失效标签
  </span>
   
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--disabled"
  >
    失效标签
  </span>
   
  <span
    class="check-tag t-tag t-tag--check t-tag--default t-tag--disabled"
  >
    失效标签
  </span>
</div>
`;

exports[`Tag icon demo works fine 1`] = `
<div
  class="tdesign-tag-icon"
>
  <div
    class="tdesign-demo-block"
  >
    
    自定义图标标签：
    
    <span
      class="custom-icon t-tag t-tag--default t-tag--dark"
    >
      <i
        class="t-icon"
      >
        <span>
          ×
        </span>
      </i>
      标签
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    图标标签：
    
    <span
      class="t-tag t-tag--default t-tag--dark"
    >
      <i
        class="t-icon t-icon-search"
      />
      标签
    </span>
  </div>
</div>
`;

exports[`Tag long-text demo works fine 1`] = `
<div
  class="tdesign-tag-ellipsis"
>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--ellipsis"
    style="max-width: 150px;"
    title="超长省略文本标签超长省略文本标签"
  >
    超长省略文本标签超长省略文本标签
  </span>
</div>
`;

exports[`Tag plain demo works fine 1`] = `
<div
  class="tdesign-tag-plain"
>
  <span
    class="t-tag t-tag--primary t-tag--plain"
  >
    标签一
  </span>
   
  <span
    class="t-tag t-tag--success t-tag--plain"
  >
    标签二
  </span>
   
  <span
    class="t-tag t-tag--info t-tag--plain"
  >
    标签三
  </span>
   
  <span
    class="t-tag t-tag--warning t-tag--plain"
  >
    标签四
  </span>
   
  <span
    class="t-tag t-tag--danger t-tag--plain"
  >
    标签五
  </span>
</div>
`;

exports[`Tag shape demo works fine 1`] = `
<div
  class="tdesign-tag-shape"
>
  <div
    class="tdesign-demo-block"
  >
    
    正常：
    
    <span
      class="t-tag t-tag--default t-tag--dark"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-tag--dark"
    >
      标签一
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    圆角：
    
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--round"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-tag--dark t-tag--round"
    >
      标签一
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    标记：
    
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--mark"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--primary t-tag--dark t-tag--mark"
    >
      标签一
    </span>
  </div>
</div>
`;

exports[`Tag size demo works fine 1`] = `
<div
  class="tdesign-tag-size"
>
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--default t-size-s t-tag--dark"
    >
      标签 小
    </span>
     
    <span
      class="t-tag t-tag--default t-tag--dark"
    >
      标签 中
    </span>
     
    <span
      class="t-tag t-tag--default t-size-l t-tag--dark"
    >
      标签 大
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <span
      class="t-tag t-tag--primary t-size-s t-tag--dark"
    >
      标签 小
    </span>
     
    <span
      class="t-tag t-tag--primary t-tag--dark"
    >
      标签 中
    </span>
     
    <span
      class="t-tag t-tag--primary t-size-l t-tag--dark"
    >
      标签 大
    </span>
  </div>
</div>
`;

exports[`Tag theme demo works fine 1`] = `
<div
  class="tdesign-tag-theme"
>
  <div
    class="tdesign-demo-block"
  >
    
    默认
    
    <span
      class="t-tag t-tag--default t-tag--dark"
    >
      默认
    </span>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    
    深色
    
    <span
      class="t-tag t-tag--primary t-tag--dark"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-tag--dark"
    >
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-tag--dark"
    >
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-tag--dark"
    >
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-tag--dark"
    >
      标签五
    </span>
  </div>
   
  <div
    class="tdesign-demo-block light"
  >
    
    浅色
    
    <span
      class="t-tag t-tag--primary t-tag--light"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-tag--light"
    >
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-tag--light"
    >
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-tag--light"
    >
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-tag--light"
    >
      标签五
    </span>
  </div>
   
  <div
    class="tdesign-demo-block plain"
  >
    
    朴素
    
    <span
      class="t-tag t-tag--primary t-tag--plain"
    >
      标签一
    </span>
     
    <span
      class="t-tag t-tag--success t-tag--plain"
    >
      标签二
    </span>
     
    <span
      class="t-tag t-tag--info t-tag--plain"
    >
      标签三
    </span>
     
    <span
      class="t-tag t-tag--warning t-tag--plain"
    >
      标签四
    </span>
     
    <span
      class="t-tag t-tag--danger t-tag--plain"
    >
      标签五
    </span>
  </div>
</div>
`;
